test/types/range/diten/rangecastbounds.bounded.good
rangecastbounds.chpl:24: error: cannot cast range from boundKind.low to boundKind.both
